Renamed to Hypersonic

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - '*'
 
 env:
-  PROJECT_NAME: TemplateMod
+  PROJECT_NAME: Hypersonic
   
   MOD_HELPER_NAME: Btd6ModHelper
   BLOONSTD6: ./BloonsTD6
